--- a/test_janus/janus_backup/docker-compose.yml
+++ b/test_janus/janus_backup/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     image: mcroth/docker-janus:latest 
     container_name: janus-gateway
     volumes:
-      - ./janus/etc/janus/:/opt/janus/etc/janus/
-      - ./janus/janus.log:/var/log/janus.log
+      - ./etc/janus/:/opt/janus/etc/janus/
+      - ./janus.log:/var/log/janus.log
     ports:
       - 8088:8088
       - 8188:8188
