--- a/basic/Dockerfile
+++ b/basic/Dockerfile
@@ -1,2 +1,3 @@
-FROM alpine:latest
-ENTRYPOINT ["echo", "hello"]
+FROM tomcat
+
+ADD https://download.java.net/java/GA/jdk17.0.1/2a2082e5a09d4267845be086888add4f/12/GPL/openjdk-17.0.1_linux-x64_bin.tar.gz /usr/local/tomcat/
