--- a/rabbitmq_perf_test/docker-compose.yml
+++ b/rabbitmq_perf_test/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.4'
 services:
 
   rabbit:
-    image: rabbitmq:3.8.5-management
+    image: martin_rabbitmq_cluster_3.8.5:v1
     container_name: rabbit
     ports:
       - "5672:5672"
@@ -20,7 +20,7 @@ services:
       - RABBITMQ_DEFAULT_PASS=admin
     restart: always
 
-  nkleeperftest:
+  martinperftest:
     image: pivotalrabbitmq/perf-test:latest
     command: "--uri amqp://admin:admin@rabbit:5672 -x 1 -y 10 -u 'throughput-test' -a --id 'test 1' -f persistent -q 5 --json-body --size 500 --rate 30000 --use-millis"
     volumes:
