--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.4'
 
 services:
-  client:
+  redis1:
+    container_name: redis1
     image: redis:5.0.7
     ports:
       - 6379:6379  
